--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,16 +1,46 @@
 body {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   margin: 0;
   padding: 0;
+  background-color: #0D0D0F;
 }
 
 .main-contenedor {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-.logo-spotify {
-  width: 10px;
-  height: 10px;
+.logo-contenedor .logo-contenedor-img {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: auto;
+}
+
+.logo-contenedor .logo-spotify {
+  width: 110px;
+  height: 110px;
+  background-color: #1ED55F;
+  border-radius: 100px;
+}
+
+.logo-contenedor .logo-contenedor-text {
+  font-size: 35px;
+  font-family: Montserrat;
+  font-weight: 900;
+  color: white;
+  margin-top: 8px;
 }
 /*# sourceMappingURL=styles.css.map */
