--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,17 +1,40 @@
 $verdeSpotify: #1ED55F;
 $colorDeFondo: #0D0D0F;
 $verdeLogin: #1CAB4F;
+$fontSpotifyTitulo: Montserrat;
+$fontSpotifyText: Roboto;
+
 
 body {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
+    background-color: $colorDeFondo;
 }
 
 .main-contenedor {
     display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.logo-spotify {
-    width: 10px;
-    height: 10px;
+.logo-contenedor {
+    .logo-contenedor-img {
+        display: flex;
+        justify-content: center;
+        margin: auto;
+    }
+    .logo-spotify {
+        width: 110px;
+        height: 110px;
+        background-color: $verdeSpotify;
+        border-radius: 100px;
+    }
+    .logo-contenedor-text {
+        font-size: 35px;
+        font-family: $fontSpotifyTitulo;
+        font-weight: 900;
+        color: white;
+        margin-top: 8 px;
+    }
 }
