--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,6 +19,10 @@ body {
           align-items: center;
 }
 
+.logo-contenedor {
+  margin-top: 50px;
+}
+
 .logo-contenedor .logo-contenedor-img {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -39,9 +43,13 @@ body {
 .logo-contenedor .logo-contenedor-text {
   font-size: 35px;
   font-family: Montserrat;
-  font-weight: 900;
+  font-weight: bolder;
   color: white;
-  margin-top: 8 px;
+  margin-top: 8px;
+}
+
+.form-contenedor {
+  margin-top: 50px;
 }
 
 .form-contenedor .form-contenedor-1 {
@@ -63,6 +71,7 @@ body {
   background-color: #121315;
   border-style: inset;
   border-color: white;
+  margin-bottom: 8px;
 }
 
 .form-contenedor .form-username::-webkit-input-placeholder {
@@ -115,8 +124,53 @@ body {
 }
 
 .form-contenedor .form-forgot {
-  color: white;
+  margin-top: 3px;
+  color: grey;
   font-size: 13px;
   text-align: right;
+}
+
+.form-contenedor .btn-sign {
+  background-color: #1ED55F;
+  color: white;
+  border-style: none;
+  width: 200px;
+  height: 35px;
+  border-radius: 100px;
+  font-weight: bolder;
+  margin-top: 15px;
+}
+
+.social-contenedor .social-contenedor-text {
+  font-family: Roboto;
+  color: #1CAB4F;
+  font-size: 13px;
+}
+
+.social-contenedor .facebook-logo {
+  width: 20px;
+  height: 20px;
+  background-color: white;
+  border-radius: 100px;
+}
+
+.social-contenedor .google-logo {
+  width: 20px;
+  height: 20px;
+  background-color: white;
+  border-radius: 100px;
+  position: relative;
+  right: -40px;
+}
+
+.sign-up {
+  margin-top: 15px;
+  font-family: Roboto;
+  font-size: 13px;
+  color: grey;
+}
+
+.sign-up a {
+  color: #1ED55F;
 }
 /*# sourceMappingURL=styles.css.map */
