--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -19,6 +19,8 @@ body {
 }
 
 .logo-contenedor {
+    margin-top: 50px;
+
     .logo-contenedor-img {
         display: flex;
         justify-content: center;
@@ -33,13 +35,14 @@ body {
     .logo-contenedor-text {
         font-size: 35px;
         font-family: $fontSpotifyTitulo;
-        font-weight: 900;
+        font-weight: bolder;
         color: white;
-        margin-top: 8 px;
+        margin-top: 8px;
     }
 }
 
 .form-contenedor {
+    margin-top: 50px;
     .form-contenedor-1 {
         display: flex;
         flex-direction: column;
@@ -53,6 +56,7 @@ body {
         background-color: #121315;
         border-style: inset;
         border-color: white;
+        margin-bottom: 8px;
     }
     .form-username::placeholder {
         text-align: center;
@@ -72,8 +76,53 @@ body {
         color: white;
     }
     .form-forgot {
-        color: white;
+        margin-top: 3px;
+        color: grey;
         font-size: 13px;
         text-align: right;
     }
+    .btn-sign {
+        background-color: $verdeSpotify;
+        color: white;
+        border-style: none;
+        width: 200px;
+        height: 35px;
+        border-radius: 100px;
+        font-weight: bolder;
+        margin-top: 15px;
+    }    
 }
+
+.social-contenedor {
+    .social-contenedor-text{
+    font-family: $fontSpotifyText;
+    color: $verdeLogin;
+    font-size: 13px;
+    }
+    .facebook-logo {
+        width: 20px;
+        height: 20px;
+        background-color: white;
+        border-radius: 100px;        
+    }
+    .google-logo {
+        width: 20px;
+        height: 20px;
+        background-color: white;
+        border-radius: 100px;
+        position: relative;
+        right: -40px;
+    }
+}
+
+.sign-up {
+    margin-top: 15px;
+    font-family: $fontSpotifyText;
+    font-size: 13px;
+    color: grey;
+    a {
+        color: $verdeSpotify;
+    }
+}
+
+
